# task2_of_OOP

./: CMakeLists.txt  OOP2.cpp  README.md  input2.txt  input3.txt  main.cpp
lib/: CMakeLists.txt  OOP2.cpp  OOP2.hpp  input.txt  input1.txt  input4.txt  input5.txt  input6.txt  input7.txt  input8.txt
tests/: CmakeLists.txt  test_app.cpp
